--- a/index.html
+++ b/index.html
@@ -5,9 +5,63 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Supplier</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section class="section1 side-change">
+        <div class="half">
+            <h1><b>BRINGING <span>GOOD FOOD</span> INTO <br> YOUR EVERYDAY</b></h1>
+            <p>we don't just deliver-we bring it, always going the extra mile to make your experience memorable. And it means this is delicious food you can enjoy everyday: from vibrant salads for healthy office lunches, to indulgent family-sized pizzas, to fresh sushi for a romantic night in. Whatever you crave, we can help."</p><br><br><br>
+            <a class="btn" target="_blank" href="https://www.foodpanda.com/">Order food</a>
+        </div>
+        <div class="half">
+            <img src="male/2nd-person.png" alt="">
+        </div>
+    </section>
+    
+    <section class="about-contact side-change">
+        <div class="half">
+            <img src="male/3rd-person.png" alt="">
+        </div>
+        <div class="half">
+            <h1>About Us</h1>
+            <p>For us, it's not just about bringing you good food from your favourite restaurants. It's about making a connection, which is why we sit down with the chefs, dreaming up menus that will arrive fresh and full of flavour. Try us!</p><br><br><br>
+            <a class="btn" target="_blank" href="https://www.foodpanda.com/">Contact us</a>
+        </div>
+    </section>
+    <section>
+        <div class="receipie">
+            <h2>Our Receipies</h2><br>
+            <p>We don't just deliver-we bring it, always going the extra mile to make your experience memorable. And it means this is delicious food you can enjoy everyday: from vibrant salads for healthy office lunches, to indulgent family-sized pizzas, to fresh sushi for a romantic night in. Whatever you crave, we can help."</p>
+        </div>
+        <div class="container">
+            <div class="food-item">
+                <img src="food/Project Cover.jpg" alt=""><br>
+                <h3>Bean/Egg biscuits</h3><br>
+                <p>The soft scrambled eggs are cheesy and chivey and seasoned with just the right amount of crunchy sea salt and freshly cracked pepper. And when paired with the soft, flakey biscuits the combination is just sublime! </p>
+            </div>
+            <div class="food-item">
+                <img src="food/Project Cover1.jpg" alt=""><br>
+                <h3>Steak with vegetable</h3><br>
+                <p>This dinner of steak, zucchini, squash, onion, and tomatoes roasts on one sheet pan. It’s so easy and yummy!</p>
+
+            </div>
+            <div class="food-item">
+                <img src="food/Project Cover5.png" alt=""><br>
+                <h3>Vegetable receipies</h3><br>
+                <p>The easiest, simplest, and BEST way to roast vegetables – perfectly tender and packed with so much flavor!</p>
+
+            </div>
+        </div><br><br><br>
+    </section>
+    <footer>
+        <div class="ender">
+
+        </div>
+    </footer>
     
 </body>
 </html>
