--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
     </section>
     <footer>
         <div class="ender">
-
+            <h1><span>Food</span> Supplier</h1>
+            <p>Eat healthy to live healthy. Live healthy to live happy.</p>
         </div>
     </footer>
     
