add hover effect

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body>
     <section>
         <nav class="nav">
-            <div class="logo space">
+            <div class="logo">
                 <img  id="logo_edit" src="Logo/logo2.png" alt="Nahid">
                 
             </div>
-            <div class="bar space">
+            <div class="bar">
                 <a class="home" href="#home">home</a>
                 <a href="#about">about us</a>
                 <a href="#receipies">our receipies</a>
