justify the position

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <a href="#ender">ender</a>
                 
             </div>
-        </nav>
+        </nav><hr>
     </section>
     <section class="section1 side-change" id="home" >
         <div class="half">
@@ -33,19 +33,19 @@
             <a class="btn" target="_blank" href="https://www.foodpanda.com/">Order food</a>
         </div>
         <div class="half">
-            <img src="male/2nd-person.png" alt="">
-        </div>
+            <img src="male/Group 8450.png" alt="">
+        </div><hr>
     </section>
     
     <section class="about-contact side-change" id="about">
         <div class="half">
-            <img src="male/3rd-person.png" alt="">
+            <img src="male/Group 8449.png" alt="">
         </div>
         <div class="half">
             <h1>About Us</h1>
             <p>For us, it's not just about bringing you good food from your favourite restaurants. It's about making a connection, which is why we sit down with the chefs, dreaming up menus that will arrive fresh and full of flavour. Try us!</p><br><br><br>
             <a class="btn" target="_blank" href="https://www.foodpanda.com/">Contact us</a>
-        </div>
+        </div><hr>
     </section>
     <section>
         <div class="receipie" id="receipies">
@@ -71,7 +71,7 @@
 
             </div>
         </div><br><br><br>
-    </section>
+    </section><hr>
     <footer id="ender">
         <div class="ender">
             <h1><span>Food</span> Supplier</h1>
