--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
                 
             </div>
             <div class="bar">
-                <a class="home" href="#home">home</a>
+                <a class="home" href="">home</a>
                 <a href="#about">about us</a>
                 <a href="#receipies">our receipies</a>
                 <a href="#ender">ender</a>
                 
             </div>
-        </nav><hr>
+        </nav>
     </section>
-    <section class="section1 side-change" id="home" >
+    <section class="section1 side-change">
         <div class="half">
             <h1><b>BRINGING <span>GOOD FOOD</span> INTO <br> YOUR EVERYDAY</b></h1>
             <p>we don't just deliver-we bring it, always going the extra mile to make your experience memorable. And it means this is delicious food you can enjoy everyday: from vibrant salads for healthy office lunches, to indulgent family-sized pizzas, to fresh sushi for a romantic night in. Whatever you crave, we can help."</p><br><br><br>
