added some syntax

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <section>
         <nav class="nav">
             <div class="logo">
-                <img  id="logo_edit" src="Logo/logo2.png" alt="Nahid">
+                <a href="https://nahid51.github.io/food.supplier/"><img  id="logo_edit" src="Logo/logo2.png" alt="Nahid"></a>
                 
             </div>
             <div class="bar">
-                <a class="home" href="">home</a>
+                <a class="home" href="#">home</a>
                 <a href="#about">about us</a>
                 <a href="#receipies">our receipies</a>
                 <a href="#ender">ender</a>
